--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,10 @@
                             <pattern>com.zaxxer.hikari</pattern>
                             <shadedPattern>me.aglerr.mclibs.hikaricp</shadedPattern>
                         </relocation>
+                        <relocation>
+                            <pattern>org.apache.commons.lang3</pattern>
+                            <shadedPattern>me.aglerr.mclibs.apache3</shadedPattern>
+                        </relocation>
                     </relocations>
                 </configuration>
                 <executions>
@@ -67,6 +71,12 @@
             <artifactId>annotations</artifactId>
             <version>12.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.12.0</version>
+        </dependency>
+
         <dependency>
             <groupId>org.spigotmc</groupId>
             <artifactId>spigot-api</artifactId>
